--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.16.3",
-    "if-env": "^1.0.4"
+    "express-session": "^1.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.9.20",
+    "passport": "^0.4.1"
   }
 }
